# squad_height_mapper

./: .gitignore  README.md  convert_to_csv.py  debug_view.py  interpolation_test.py  low_ress_font.py  mapper.py  ue_mapper_script.py
UE4_Assets/: GetData.uasset  GetInstaces.uasset  ProgressBar.uasset  Status.uasset  heightMapper.uasset
rust_src/: Cargo.toml
rust_src/src/: main.rs
