[package]
name = "rust_squad_height_mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
cast = "0.3.0"
bimap = "0.6.3"
image = "0.25.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
polars = {version = "0.41.3", features = ["lazy", "strings", "regex", "performant", "rows", "unique_counts", "list_count", "arg_where", "fmt"]}

